<resources>
    <string name="app_name">GoPetting</string>
    <string name="action_settings">Settings</string>
    <string name="contact_text">For any feedback, complaints or suggestions, Please write to us</string>
    <string name="profile_name">Hugh Jackman</string>
    <string name="drawer_location">Location</string>
    <string name="drawer_orders">Orders</string>
    <string name="drawer_contact_us">Contact Us</string>
    <string name="drawer_terms_conditions">T&amp;C</string>
    <string name="drawer_about_us">About Us</string>
    <string name="drawer_open">Drawer Opened</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_login">Login</string>
    <string name="home_text">Home Text</string>
    <string name="location_text">Location Text</string>
    <string name="orders_text">Orders Text</string>
    <string name="contact_us_text">Contact Us Text</string>
    <string name="terms_conditon_text">Terms Condition Text</string>
    <string name="about_us_text">About Us Text</string>
    <string name="product_1">Dog</string>
    <string name="product_2">Cat</string>
    <string name="product_3">Fish</string>
    <string name="title_activity_dog">Dogs</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_filter">Filter</string>
    <string name="typeface_bold">fonts/DIN-Bold.otf</string>
    <string name="typeface_light">fonts/DIN-Light.otf</string>
    <string name="typeface_regular">fonts/DIN-Regular.otf</string>
    <string name="dogActivityTitle">Dogs</string>
    <string name="title_activity_dog_details">Dog Details</string>
    <string name="cart">Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="dummy_text">"Delivery \n A drawable resource is a general concept for a graphic that can be drawn to the screen and which you can retrieve with APIs such as getDrawable(int) or apply to another XML resource with attributes "</string>
    <string name="pincode_hint">Enter Pincode</string>
    <string name="check">Check</string>
    <string name="enter_pincode">Please enter your PIN Code to check delivery time and Cash On Delivery availability.</string>
    <string name="delivery_options_title">Delivery Options</string>
    <string name="text_clear">CLEAR</string>
    <string name="text_apply">Apply</string>
    <string name="title_activity_filter">Filters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="sort_by">
        <item>Newly Listed</item>
        <item>Price: Low to High</item>
        <item>Price: High to Low</item>
    </string-array>
    <string name="facebook_app_id">218585938557253</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="different_login">or</string>
    <string name="plus_sign_out">Change Google+ account</string>
    <string name="plus_disconnect">Disconnect from Google+</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="error_invalid_password">The password is too short</string>
    <string name="error_incorrect_password">Email or password incorrect</string>
    <string name="error_field_required">Required</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Register</string>
    <string name="login">Login</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."  </string>
    <string name="app_decription">Your awesome app</string>
    <string name="sample_text_login">Sample Text Login</string>
    <string name="user_profile">Profile</string>
    <string name="login_snackbar">\"Email Id is required to sign-up, please try again\"</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="fb_signin">Sign in with Facebook</string>
    <string name="profile_text">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="profile_dob">Date Of Birth</string>
    <string name="drawer_faq">FAQ</string>
    <string name="drawer_feedback">Feedback</string>
    <string name="text_service_location">Hyderabad</string>
    <string name="dialog_message_service_location">We\'re launching soon in other cities</string>
    <string name="dialog_title_service_location">Service Location : Hyderabad</string>
    <string name="dialog_logout_question">Do you want to logout of your account?</string>
    <string name="dialog_title_logout">Logout</string>
    <string name="dialog_button_logout">LOGOUT</string>
    <string name="dialog_button_cancel">CANCEL</string>
    <string name="drawer_share_app">Share App</string>
    <string name="share_app_text">Hey Check out this new app called GoPetting</string>
    <string name="title_activity_service">Services</string>
    <string name="package_detail_title">What is included</string>
    <string name="continue_text">Continue</string>
    <string name="dialog_question_login">Help us serve you better :)\nPlease login</string>
    <string name="dialog_title_login">Login</string>
    <string name="dialog_button_login">LOGIN</string>
    <string name="dialog_question_cart_item_change_part1">"You already have one package under "</string>
    <string name="dialog_question_cart_item_change_part2">" category\n\n1 package per category can be ordered"</string>
    <string name="dialog_question_cart_item_change_part3">\n\nWould you like to replace it with this?</string>
    <string name="dialog_button_cart_item_change">Yes</string>
    <string name="dialog_button_no">NO</string>
    <string name="empty_cart_text">Your cart is empty!\nAdd items to cart</string>
    <string name="title_activity_appointment">Book an Appointment</string>
    <string name="full_address">%1$s\n%2$s %3$s\n%4$s %5$s %6$s</string>
    <string name="done_text">Done</string>
    <string name="submit_text">Submit</string>
    <string name="add_address_text">Add a new address</string>
    <string name="select_date_time_text"><![CDATA[Select Date & Time]]></string>
    <string name="snackbar_services">Please add a service to cart to continue</string>
    <string name="snackbar_not_logged_in">Please login</string>
    <string name="snackbar_empty_cart">Cart is empty, please go back and add a service</string>
    <string name="snackbar_order_not_logged_in">Please login to view your orders</string>
    <string name="hint_full_name">Name</string>
    <string name="hint_address">Address</string>
    <string name="hint_area">Area/Locality</string>
    <string name="hint_landmark">Landmark (Optional)</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_pincode">Pincode</string>
    <string name="hint_mobile">Mobile No</string>
    <string name="text_submit">Submit</string>
    <string name="snackbar_add_address">Please fill all mandatory fields</string>
    <string name="title_activity_add_address">Add Address</string>
    <string name="snackbar_non_servicable_pincode">Currently we do not provide services at this area</string>
    <string name="title_activity_address_list">Choose an Address</string>
    <string name="snackbar_choose_address">Please choose an address and press submit</string>
    <string name="text_promo_applied">Promo Code Applied Successfully</string>
    <string name="text_remove">Remove</string>
    <string name="hint_apply_promo">promo code</string>
    <string name="text_pickup_drop">Pickup - Service - Drop Facility</string>
    <string name="text_sub_total">Sub Total</string>
    <string name="text_promo_code_subtotal">Promo</string>
    <string name="text_pickup_drop_subtotal">Pickup-Service-Drop</string>
    <string name="text_grand_total">Grand Total</string>
    <string name="text_special_instructions">Tell us more about your wonderful pet!</string>
    <string name="text_date_time"><![CDATA[Date & Time]]></string>
    <string name="text_i_accept_terms_conditions"><![CDATA[terms & conditions]]></string>
    <string name="title_activity_order_summary">Order Summary</string>
    <string name="text_proceed_to_payment">Proceed to Payment</string>
    <string name="snackbar_appointment">Please add an address</string>
    <string name="hint_age_group">Choose Age</string>
    <string name="order_history_pickup_drop">Includes Pickup - Service - Drop Facility</string>
    <string-array name="string_array_age_group">
        <item>Choose Age</item>
        <item>New Born</item>
        <item>3months - 6months</item>
        <item>6months - 1year</item>
        <item>1year - 2years</item>
        <item>More than 2years</item>
    </string-array>
    <string name="sub_total_amount">Rs.%1$d</string>
    <string name="promo_code_amount">(-)Rs.%1$d</string>
    <string name="grand_total_amount">Rs.%1$d</string>
    <string name="timeslot">, %1$s</string>
    <string name="terms_conditions_underlined">I accept %1$s</string>
    <string name="snackbar_invalid_promo">Promo Code is invalid or expired</string>
    <string name="hint_breed_type">Enter Breed Type</string>
    <string name="text_i_accept">I accept</string>
    <string name="snackbar_something_went_wrong">Something went wrong, please try again</string>
    <string name="snackbar_check_details">Please check details and try again</string>
    <string name="snackbar_mandatory_fields">Please fill mandatory fields</string>
    <string name="slot_not_available">Please choose other slots, this slot is booked</string>
    <string name="text_book_another_service">Book Another Service</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_something_went_wrong">Something Went Wrong</string>
    <string name="txn_id">Transaction ID</string>
    <string name="order_id">Order ID :</string>
    <string name="order_confirmation_message">Congratulations! Your order has been confirmed.\nOur service provider will contact you prior to service time </string>
    <string name="order_failed_message">We\'re sorry but the transaction failed.\nIf any money is deducted from your account, it\'ll be refunded back\nPlease note the Transaction ID for future reference.</string>
    <string name="order_went_wrong_message">We\'re sorry but something went wrong, please check Order History for Order status\nIf transaction got failed and money got deducted from your account, it\'ll be refunded back\nPlease note the Transaction ID for future reference.</string>
    <string name="scheduled_on">Scheduled On</string>
    <string name="scheduled_slot">%1$s, %2$s</string>
    <string name="text_try_again">Try again</string>
    <string name="title_activity_order_history">My Orders</string>
    <string name="empty_order_history">There are no orders!</string>
    <string name="history_order_id">Order ID : </string>
    <string name="title_activity_order_history_details">Order Details</string>
    <string name="text_amount_paid">Amount Paid</string>
    <string name="text_contact_details">Contact Details</string>
    <string name="text_cancel_order">Cancel Order</string>
    <string name="dialog_question_cancel">Do you want to Cancel this order</string>
    <string name="dialog_button_yes">YES</string>
    <string-array name="array_cancel_order_options">
        <item>Choose</item>
        <item>Schedule mismatch</item>
        <item>Our experts didn\'t turn up</item>
        <item>Price was expensive</item>
        <item>Plan Changed</item>
        <item>Other reason</item>
    </string-array>
    <string name="dialog_button_ok">OK</string>
    <string name="text_home">HOME</string>
</resources>