<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@id/ll_activity_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_50"
    android:orientation="vertical">

    <include layout="@layout/toolbar_with_headerbar" />

    <RelativeLayout
        android:id="@+id/rl_main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_inner_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <!--android:background="@color/white"-->

            <include layout="@layout/content_order_summary"/>



            <RelativeLayout
                android:id="@id/rl_footer_button_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/footer_height"
                android:layout_alignParentBottom="true"
                android:background="@drawable/selector_footer_button"
                android:clickable="true">

                <LinearLayout
                    android:id="@id/ll_footer_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:padding="10.0dip">

                    <Button
                        android:id="@id/btn_footer_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:clickable="false"
                        android:gravity="center"
                        android:text="@string/text_proceed_to_payment"
                        android:textColor="@color/grey_900_primary"
                        android:textSize="@dimen/text_size_medium_special" />


                </LinearLayout>

            </RelativeLayout>

        </RelativeLayout>

        <FrameLayout
            android:id="@id/progress_bar_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ProgressBar
                android:id="@id/progress_bar"
                android:layout_width="36.0dip"
                android:layout_height="36.0dip"
                android:layout_gravity="center" />

        </FrameLayout>

        <LinearLayout
            android:id="@id/ll_empty_cart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="15.0dip"
            android:paddingRight="15.0dip"
            android:visibility="gone">

            <!--<ImageView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/ic_empty_cart" />-->



            <com.gopetting.android.views.TypefaceTextView
                android:id="@id/tv_empty_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10.0dip"
                android:layout_marginBottom="10.0dip"
                android:gravity="center"
                android:lineSpacingExtra="3.0dip"
                android:text="@string/empty_cart_text"
                android:textColor="@color/item_text_regular"
                android:textSize="@dimen/text_size_large"
                app:customTypeface="@string/typeface_regular" />

            <Button
                android:id="@id/btn_home"
                android:layout_width="100.0dip"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rectangle"
                android:paddingBottom="10.0dip"
                android:paddingTop="10.0dip"
                android:text="@string/text_home"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
